// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable Flex Table With Different Rows 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c9 {
  width: inherit;
}

.c12 {
  overflow: hidden;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c11 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c11:hover {
  background: #F5F5F5;
}

.c11 > *:first-child {
  padding-left: 0;
}

.c11 > *:last-child {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:last-child {
  padding-right: 0;
}

.c15 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c15 > *:first-child {
  padding-left: 0;
}

.c15 > *:last-child {
  padding-right: 0;
}

.c16 {
  background: #FFFFFF;
  border-bottom: 1px solid #00C8F5;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c16:hover {
  background: #F5F5F5;
}

.c16 > *:first-child {
  padding-left: 0;
}

.c16 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    FlexTable With Different Rows
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c11"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Default
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c4"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            No highlight
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            No highlight
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            No highlight
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c14"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Separator hidden
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c15"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c16"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Separator color set
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable Flex Table With Hidden Expand Item 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c21 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c16 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c16,
.c16[type='button'],
.c16[type='reset'],
.c16[type='submit'] {
  -webkit-appearance: button;
}

.c16::-moz-focus-inner,
.c16[type='button']::-moz-focus-inner,
.c16[type='reset']::-moz-focus-inner,
.c16[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c16:-moz-focusring,
.c16[type='button']:-moz-focusring,
.c16[type='reset']:-moz-focusring,
.c16[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  width: inherit;
}

.c13 {
  overflow: hidden;
}

.c17:focus {
  outline: none;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media not all and (max-width:975px) {
  .c15 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c20 {
    display: none;
  }
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    FlexTable With Hidden Expand Item
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c12"
      role="row"
    >
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Value 1
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Value 2
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Value 3
          </span>
        </div>
      </div>
      <div
        className="c11 c13"
        role="cell"
      >
        <div
          className="c15"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c16 c17"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c19"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c20"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c16 c17"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c18"
            >
              <svg
                aria-hidden="true"
                className="c21 c22"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable Table Custom Data Cells 1`] = `
.c21 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c1 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 0 150px;
  -ms-flex: 0 0 150px;
  flex: 0 0 150px;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  box-sizing: border-box;
}

.c17 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c15 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #6E6E69;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c20 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c24 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c7 {
  width: inherit;
}

.c19 {
  overflow: hidden;
}

.c2 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c2 > *:first-child {
  padding-left: 0;
}

.c2 > *:last-child {
  padding-right: 0;
}

.c18 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c18:hover {
  background: #F5F5F5;
}

.c18 > *:first-child {
  padding-left: 0;
}

.c18 > *:last-child {
  padding-right: 0;
}

.c3 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c22 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c16 {
  margin-left: 4px;
}

.c10 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c5 {
  overflow: hidden;
}

.c23 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

.c12 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1 c2 c3"
    role="row"
  >
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Date
        </span>
      </div>
    </div>
    <div
      aria-sort="none"
      className="c9 c5"
      role="columnheader"
    >
      <a
        className="c10"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <div
          className="c11 c12"
        >
          <div
            className="c13 c14"
          >
            <div
              className="c6 c7"
            >
              <span
                className="c8"
              >
                Transferable Quantity
              </span>
            </div>
          </div>
          <div
            className="c13"
          >
            <span
              className="c8"
            >
              USD
            </span>
          </div>
          <div
            className="c13"
          >
            <svg
              aria-hidden="true"
              className="c15 c16"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c4 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Country
        </span>
      </div>
    </div>
    <div
      className="c17 c5"
      role="columnheader"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c8"
        >
          Percentage
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1 c18"
    role="row"
  >
    <div
      className="c4 c19"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c20"
        >
          <time>
            7/10/2020, 12:53
          </time>
        </span>
      </div>
    </div>
    <div
      className="c9 c19"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c20"
        >
          
          300
        </span>
      </div>
    </div>
    <div
      className="c4 c19"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c20"
        >
          <svg
            className="c21"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </span>
      </div>
    </div>
    <div
      className="c17 c19"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c20"
        >
          
          75
          %
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1 c18"
    role="row"
  >
    <div
      className="c4 c19"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c20"
        >
          <time>
            7/10/2020, 12:53
          </time>
        </span>
      </div>
    </div>
    <div
      className="c9 c19"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c20"
        >
          
          100
        </span>
      </div>
    </div>
    <div
      className="c4 c19"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c20"
        />
      </div>
    </div>
    <div
      className="c17 c19"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c20"
        >
          
          25
          %
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1 c2 c22"
    role="row"
  >
    <div
      className="c4 c23"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c24"
        />
      </div>
    </div>
    <div
      className="c9 c23"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c24"
        >
          
          400
        </span>
      </div>
    </div>
    <div
      className="c4 c23"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c24"
        />
      </div>
    </div>
    <div
      className="c17 c23"
      role="cell"
    >
      <div
        className="c6 c7"
      >
        <span
          className="c24"
        >
          
          25
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;
